<resources>
    <string name="app_name">Cadastro</string>
    <string name="name_person_form"><b>Nome completo</b></string>
    <string name="telefone_person_form"><b>Telefone</b></string>
    <string name="email_person_form"><b>E-mail</b></string>
    <string name="checkbox_aceito_lista"><b>Ingressar na lista de e-mails?</b></string>
    <string name="radio_group_sexo"><b>Sexo</b></string>
    <string name="radio_group_sexo_masculino"><b>Masculino</b></string>
    <string name="radio_group_sexo_feminino"><b>Feminino</b></string>
    <string name="cidade_person_form"><b>Cidade</b></string>
    <string name="UF_person_form"><b>UF</b></string>
    <string-array name="arrayUF">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal*</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string name="botao_limpar"><b>Limpar</b></string>
    <string name="botao_salvar"><b>Salvar</b></string>
</resources>